@@ -46,7 +46,7 @@ public class GumgaRequestFilter extends HandlerInterceptorAdapter {
     private ThreadLocal<Long> tempo = new ThreadLocal<>();
 
     @Autowired(required = false)
-    private ApiOperationTranslator aot = (url, method) -> "NOOP";
+    private ApiOperationTranslator aot;
 
     public void setAot(ApiOperationTranslator aot) {
         this.aot = aot;
@@ -103,7 +103,7 @@ public class GumgaRequestFilter extends HandlerInterceptorAdapter {
             if (gumgaOperationKeyMethodAnnotation != null) {
                 operationKey = gumgaOperationKeyMethodAnnotation.value();
             } else {
-                operationKey = aot.getOperation(endPoint, method);
+                operationKey = aot.getOperation(endPoint, method, request);
             }
             if (operationKey.equals("NOOP")) {
                 String apiName = hm.getBean().getClass().getSimpleName();
